# FuturePET-PET-Lab-Demo

./: .copier-answers.yml  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  sandbox.py
src/tno/mpc/demo/futurepet/: __init__.py  demo.py
src/tno/mpc/demo/futurepet/test/: __init__.py  test_my_mod.py
src/tno/mpc/secret_sharing/additive/: __init__.py  additive.py
src/tno/mpc/secret_sharing/additive/test/: __init__.py  test_additive.py
src/tno/mpc/secret_sharing/shamir/: __init__.py  shamir.py
src/tno/mpc/secret_sharing/shamir/test/: __init__.py  test_shamir.py
src/tno/mpc/secret_sharing/templates/: __init__.py  base.py  exceptions.py  linear.py  threshold.py  utils.py
src/tno/mpc/secret_sharing/templates/test/: __init__.py  test_base.py
